Add webmaster verification

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Which card should I lead? Euchre database</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+    <meta name="google-site-verification" content="oPaEVz9U7hjXxUqVafEEhyNbT-8tH_klI4OK1UVrQHk" />
     <style>
     .hand-card {
       max-width: 19%;
