Add Google Analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109911835-4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+        gtag('config', 'UA-109911835-4');
+    </script>
     <title>Which card should I lead? Euchre database</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0;">
     <meta name="google-site-verification" content="oPaEVz9U7hjXxUqVafEEhyNbT-8tH_klI4OK1UVrQHk" />
